Removed garages from game and map editor.